# oops-fix

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-24-didyoumean-implementation.md  2026-02-24-rename-to-oops-fix-design.md
src/: main.rs  shell.rs  suggest.rs  update.rs
tests/: integration.rs
