[package]
name = "oops-fix"
version = "0.3.0"
edition = "2021"
description = "Shell command typo correction tool using Damerau-Levenshtein distance"
license = "MIT"
repository = "https://github.com/yhzion/oops-fix"
keywords = ["cli", "shell", "typo", "autocorrect", "command-not-found"]
categories = ["command-line-utilities"]

[[bin]]
name = "oops"
path = "src/main.rs"

[dependencies]
strsim = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
